# algorithm

./: .cproject  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/aimtoffer/: CMakeLists.txt  interview_25.cpp  interview_25.txt  interview_26.cpp  interview_26.txt  interview_27.cpp  interview_27.txt  interview_28.cpp  interview_28.txt  interview_28_ext1.cpp  interview_29.cpp  interview_29.txt  interview_30.cpp  interview_30.txt  interview_31.cpp  interview_31.txt  interview_32.cpp  interview_32.txt  interview_33.cpp  interview_33.txt  interview_34.cpp  interview_34.txt  interview_35.cpp  interview_35.txt  interview_36.cpp  interview_36.txt  interview_37.cpp  interview_37.txt  interview_38.cpp  interview_38.txt  interview_39.cpp  interview_39.txt  interview_40.cpp  interview_40.txt  interview_41.cpp  interview_41.txt  interview_42.cpp  interview_42.txt  interview_43.cpp  interview_43.txt  (+14 more)
src/chapter_3/:  UVa1225.c  CMakeLists.txt  README.md  Sol_3_3.c  UVa10082.c  UVa1368.c  UVa1583.c  UVa1584.c  UVa1585.c  UVa1586.c  UVa202.c  UVa227.c  UVa232.c  UVa340.c  UVa401.c  UVa455.c  UVa_272.c
src/test/: test.cpp
